

[metadata]
name = ergtrack_api
version = 0.0.1
description = code for ergTrack backend
long_description = file: README.md
long_description_content_type = text/markdown
author = kaja
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.9
package_dir =
    = src

[options.packages.find]
where = src